--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.user
 *.sln.docstates
 ./nuget
+./vs
 
 # Build results
 
@@ -184,3 +185,4 @@ $RECYCLE.BIN/
 
 # Visual Studio 2014 CTP
 **/*.sln.ide
+*.testlog
