--- a/src/Intrinio.Net/Intrinio.Net.csproj
+++ b/src/Intrinio.Net/Intrinio.Net.csproj
@@ -14,6 +14,7 @@
     <PackageLicenseUrl>https://www.gnu.org/licenses/gpl-3.0.en.html</PackageLicenseUrl>
 	<PackageTags>intrinio;api;data;stock;price;</PackageTags>
 	<PackageIcon>intrinio.png</PackageIcon>
+    <Title>Intrinio.Net</Title>
   </PropertyGroup>
 
   <ItemGroup>
