Updates to package

--- a/src/Intrinio.Net/Intrinio.Net.csproj
+++ b/src/Intrinio.Net/Intrinio.Net.csproj
@@ -1,20 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Title>Intrinio.Net</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
 	<Company>MILL5</Company>
-    <Copyright>Copyright 2021</Copyright>
+    <Copyright>Copyright © MILL5, LLC 2021</Copyright>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/MILL5/Intrinio.Net</RepositoryUrl>
     <PackageProjectUrl>https://github.com/MILL5/Intrinio.Net</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReleaseNotes>This is an initial release recompiled for .NET Standard 2.x.</PackageReleaseNotes>
-    <Authors>Richard Crane</Authors>
+    <Authors>MILL5</Authors>
 	<Description>This is a port of the Intrinio.SDK to .NET Standard so that it can be used across .NET Framework, .NET Core, and the new .NET 5.0.</Description>
     <PackageLicenseUrl>https://www.gnu.org/licenses/gpl-3.0.en.html</PackageLicenseUrl>
 	<PackageTags>intrinio;api;data;stock;price;</PackageTags>
 	<PackageIcon>intrinio.png</PackageIcon>
-    <Title>Intrinio.Net</Title>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
