--- a/src/Intrinio.Net/Intrinio.Net.csproj
+++ b/src/Intrinio.Net/Intrinio.Net.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Title>Intrinio.Net</Title>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
 	<Company>MILL5</Company>
     <Copyright>Copyright © MILL5, LLC 2021</Copyright>
     <RepositoryType>git</RepositoryType>
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="JsonSubTypes" Version="1.8.0" />
+    <PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.1-alpha" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Polly" Version="7.2.2" />
