--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ build/
 [Bb]in/
 [Oo]bj/
 
+# Settings
+**/*appsettings.local.json
+**/*launchSettings.json
+**/*.runsettings
+
 # NuGet Packages
 *.nupkg
 # The packages folder can be ignored because of Package Restore
