--- a/src/Intrinio.Net/Intrinio.Net.csproj
+++ b/src/Intrinio.Net/Intrinio.Net.csproj
@@ -17,8 +17,8 @@
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
 	<IncludeSymbols>true</IncludeSymbols>
 	<SymbolPackageFormat>snupkg</SymbolPackageFormat>
-	<Version>1.0.13-alpha</Version>
-	<AssemblyVersion>1.0.13.0</AssemblyVersion>
+	<Version>1.0.14</Version>
+	<AssemblyVersion>1.0.14.0</AssemblyVersion>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<CodeAnalysisRuleSet>..\..\.sonarlint\intrinio.netcsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
@@ -31,7 +31,7 @@
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 	<PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.2-alpha" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-	<PackageReference Include="Pineapple" Version="1.0.34" />
+	<PackageReference Include="Pineapple" Version="1.0.36" />
 	<PackageReference Include="Polly" Version="7.2.2" />
 	<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
