--- a/src/Intrinio.Net/Intrinio.Net.csproj
+++ b/src/Intrinio.Net/Intrinio.Net.csproj
@@ -17,8 +17,8 @@
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
 	<IncludeSymbols>true</IncludeSymbols>
 	<SymbolPackageFormat>snupkg</SymbolPackageFormat>
-	<Version>1.0.16</Version>
-	<AssemblyVersion>1.0.16.0</AssemblyVersion>
+	<Version>1.0.17</Version>
+	<AssemblyVersion>1.0.17.0</AssemblyVersion>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<CodeAnalysisRuleSet>..\..\.sonarlint\intrinio.netcsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
@@ -29,7 +29,7 @@
 
   <ItemGroup>
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-	<PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.3-alpha" />
+	<PackageReference Include="Cph.FinancialDataSanitizer" Version="1.0.16" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	<PackageReference Include="Pineapple" Version="1.0.36" />
 	<PackageReference Include="Polly" Version="7.2.3" />
