--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -1,4 +1,4 @@
-name: CI - Build and Test
+﻿name: CI - Build and Test
 
 on:
   push:
@@ -16,30 +16,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup .NET Core 6.0
-        uses: actions/setup-dotnet@v1
+      - name: 🛒 checkout
+        uses: actions/checkout@v3
         with:
-          dotnet-version: '6.0.x'
-          include-prerelease: true
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Install SonarQube Scanner
+      - name: ☁️ Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~\sonar\cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: ☁️ Cache SonarCloud scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v1
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+
+      - name: ☁️ Install SonarCloud scanner
         run: dotnet tool install --global dotnet-sonarscanner
 
-      - name: Begin SonarQube Scanner
+      - name: ☁️ Begin SonarCloud Scanner
         run: dotnet-sonarscanner begin /k:"MILL5_Intrinio.Net" /o:"mill5-sonarcloud" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.scm.disabled=false /d:sonar.scm.provider=git /d:sonar.links.scm="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git" /d:sonar.cs.opencover.reportsPaths='**/coverage.opencover.xml'
 
-      - name: Restore Dependencies
+      - name: 📦 Add GitHub Nuget Source
+        run: |
+          dotnet nuget add source --name github "https://nuget.pkg.github.com/MILL5/index.json" --username m5github01 --password ${{ secrets.GH_TOKEN }} --store-password-in-clear-text
+
+      - name: 🚧 Restore
         run: dotnet restore Intrinio.Net.sln
 
-      - name: Build
+      - name: 🛠️ Build
         run: dotnet build --no-restore --configuration Release
       
-      - name: Test
+      - name: 🧪 Run Tests
         run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute="Obsolete"
         env:
           IntrinioApiKey: ${{ secrets.INTRINIO_API_KEY }}
 
-      - name: End SonarQube Scanner
+      - name: ☁️ End SonarCloud Scannerr
         run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONARQUBE_TOKEN }}"
