--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -57,5 +57,5 @@ jobs:
         env:
           IntrinioApiKey: ${{ secrets.INTRINIO_API_KEY }}
 
-      - name: ☁️ End SonarCloud Scannerr
+      - name: ☁️ End SonarCloud Scanner
         run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONARQUBE_TOKEN }}"
