--- a/src/Intrinio.Net/Intrinio.Net.csproj
+++ b/src/Intrinio.Net/Intrinio.Net.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	<Title>Intrinio.Net</Title>
-	<TargetFramework>net6.0</TargetFramework>
+	<TargetFramework>net7.0</TargetFramework>
 	<Company>MILL5</Company>
 	<Copyright>Copyright © MILL5, LLC 2021</Copyright>
 	<RepositoryType>git</RepositoryType>
@@ -17,8 +17,8 @@
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
 	<IncludeSymbols>true</IncludeSymbols>
 	<SymbolPackageFormat>snupkg</SymbolPackageFormat>
-	<Version>1.0.17</Version>
-	<AssemblyVersion>1.0.17.0</AssemblyVersion>
+	<Version>1.0.18</Version>
+	<AssemblyVersion>1.0.18.0</AssemblyVersion>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<CodeAnalysisRuleSet>..\..\.sonarlint\intrinio.netcsharp.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
@@ -28,12 +28,12 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-	<PackageReference Include="Cph.FinancialDataSanitizer" Version="1.0.16" />
-	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-	<PackageReference Include="Pineapple" Version="1.0.36" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+	<PackageReference Include="Cph.FinancialDataSanitizer" Version="1.0.17" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta3" />
+	<PackageReference Include="Pineapple" Version="1.0.41" />
 	<PackageReference Include="Polly" Version="7.2.3" />
-	<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+	<PackageReference Include="System.ComponentModel.Annotations" Version="6.0.0-preview.4.21253.7" />
   </ItemGroup>
 
   <ItemGroup>
