--- a/src/Intrinio.Net/Intrinio.Net.csproj
+++ b/src/Intrinio.Net/Intrinio.Net.csproj
@@ -21,6 +21,7 @@
 	<AssemblyVersion>1.3.0.0</AssemblyVersion>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<CodeAnalysisRuleSet>..\..\.sonarlint\intrinio.netcsharp.ruleset</CodeAnalysisRuleSet>
+	<UserSecretsId>a0208f94-4031-45c5-a6a8-24ad2ddfe947</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,6 +32,7 @@
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 	<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
 	<PackageReference Include="Cph.FinancialDataSanitizer" Version="1.0.17" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 	<PackageReference Include="Pineapple" Version="1.0.41" />
 	<PackageReference Include="Polly" Version="7.2.3" />
